@@ -1,3 +1,4 @@
+11/25/13 add graph placeholder to 'Custom' screen
 11/25/13 revert to using same color for drain cleaner and battery acid, this was intentional
 11/25/13 Basics: make 'milk' the initial solute
 11/25/13 use smaller default font for title(s) on ExpandCollapseBar
